[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/NewNotesItem.gd" type="Script" id=1]

[node name="NewNotesItem" type="Control"]
anchor_right = 1.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 92 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 965.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Contents"
valign = 1
autowrap = true
clip_text = true

[node name="OpenLinkButton" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 888.0
margin_right = 965.0
margin_bottom = 92.0
text = "Open Link"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
margin_left = 969.0
margin_right = 1024.0
margin_bottom = 92.0
text = "Delete"

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Are you sure?"

[connection signal="pressed" from="HBoxContainer/OpenLinkButton" to="." method="_on_OpenLinkButton_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_DeleteDialog_confirmed"]
